[package]
name = "dzp"
version = "0.1.0"
authors = ["acikek"]
description = "DeniZip, the Denizen Project Manager"
homepage = "https://github.com/acikek/dzp-rs"
keywords = ["denizen", "dzp", "denizip", "cli"]
license = "MIT"
categories = ["cli"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "2.33.0", features = ["yaml"] }
dirs = "4.0.0"
git2 = "0.13.24"
lazer = "0.3.1"
license = "<=1.1.10"
reduce = "0.1.4"
rustyline = "9.0.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.20"
titlecase = "1.1.0"
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2"